--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.paypal.ankuran">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".AppMain"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,7 +21,8 @@
         <activity android:name=".ui.WorkersProfileListActivity" />
         <activity android:name=".ui.CalculateWageActivity" />
         <activity android:name=".ui.SocialReportActivity" />
-        <activity android:name=".ui.InventoryDetailsActivity"></activity>
+        <activity android:name=".ui.InventoryDetailsActivity" />
+        <activity android:name=".ui.AddNewWorker"></activity>
     </application>
 
 </manifest>
