group wages rebased

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ankuran">
+          package="com.ankuran">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,13 +20,13 @@
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
 
     <application
-        android:name="com.ankuran.AppMain"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:name="com.ankuran.AppMain"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <activity android:name="com.ankuran.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,26 +35,27 @@
             </intent-filter>
         </activity>
         <activity android:name="com.ankuran.ui.activity.WorkersProfileListActivity"
-            android:label="@string/title_worker_list"/>
+                  android:label="@string/title_worker_list"/>
         <activity android:name="com.ankuran.ui.activity.CalculateWageActivity" />
         <activity android:name="com.ankuran.ui.activity.SocialReportActivity" />
         <activity android:name="com.ankuran.ui.activity.InventoryDetailsActivity" />
         <activity android:name="com.ankuran.ui.activity.AddNewWorker"
-            android:label="@string/title_add_new_worker" />
+                  android:label="@string/title_add_new_worker" />
         <activity android:name="com.ankuran.ui.activity.AddPaymentWageActivity" />
         <activity android:name="com.ankuran.ui.activity.WorkerActivityList"
-            android:label="@string/title_worker_profile"/>
+                  android:label="@string/title_worker_profile"/>
         <activity android:name="com.ankuran.ui.activity.ItemGridViewActivity" />
         <activity android:name="com.ankuran.ui.activity.AddNewItem"></activity>
+        <activity android:name="com.ankuran.ui.activity.GroupWagesActivity"/>
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.ankuran.android.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="com.ankuran.android.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths"></meta-data>
         </provider>
 
         <!-- Start of service required TMS Account Authentication -->
@@ -66,8 +67,8 @@
             </intent-filter>
             <!-- This points to an XMLfile which describes our account service. -->
             <meta-data
-                android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator" />
+                    android:name="android.accounts.AccountAuthenticator"
+                    android:resource="@xml/authenticator" />
         </service>
         <!-- End of service required Account Authentication -->
 
@@ -84,20 +85,20 @@
         -->
 
         <provider
-            android:name="com.ankuran.framework.imagesync.AnkuranImageSyncProvider"
-            android:authorities="com.quikr.tms.framework.imagesync"
-            android:exported="false"
-            android:label="@string/app_name"
-            android:syncable="true" />
+                android:name="com.ankuran.framework.imagesync.AnkuranImageSyncProvider"
+                android:authorities="com.quikr.tms.framework.imagesync"
+                android:exported="false"
+                android:label="@string/app_name"
+                android:syncable="true" />
 
         <!--
       This service implements our SyncAdapter. It needs to be exported, so that the system
       sync framework can access it.
         -->
         <service
-            android:name="com.ankuran.framework.imagesync.AnkuranImageSyncService"
-            android:exported="false"
-            android:process=":sync">
+                android:name="com.ankuran.framework.imagesync.AnkuranImageSyncService"
+                android:exported="false"
+                android:process=":sync">
 
             <!--
             This intent filter is required. It allows the system to launch our sync service
@@ -108,8 +109,8 @@
             </intent-filter>
             <!-- This points to a required XML file which describes our SyncAdapter. -->
             <meta-data
-                android:name="android.content.SyncAdapter"
-                android:resource="@xml/imagesyncadapter" />
+                    android:name="android.content.SyncAdapter"
+                    android:resource="@xml/imagesyncadapter" />
         </service>
         <!-- END of imagesyncadapter declaration -->
 
