--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.5.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.2.5'
+    implementation 'com.android.support:support-v4:26.1.0'
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     implementation 'com.github.myinnos:AlphabetIndex-Fast-Scroll-RecyclerView:1.0.92'
