--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,10 +115,17 @@
         </service>
         <!-- END of imagesyncadapter declaration -->
 
-        <activity android:name=".ui.activity.PayoutReportActivity"
+        <activity
+            android:name=".ui.activity.PayoutReportActivity"
             android:label="@string/title_report" />
-        <activity android:name=".ui.activity.AddNewSettlementActivity"
-            android:label="@string/title_add_settlement" ></activity>
+        <activity
+            android:name=".ui.activity.AddNewSettlementActivity"
+            android:label="@string/title_add_settlement" />
+        <activity
+            android:name=".ui.activity.InventoryListActivity"
+            android:label="@string/title_activity_inventory_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.activity.ItemDetailsActivity"></activity>
     </application>
 
 </manifest>
