--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:label="@string/title_worker_profile" />
         <activity android:name=".ui.activity.ItemGridViewActivity" />
         <activity android:name=".ui.activity.AddNewItem" />
-        <activity android:name=".ui.activity.GroupWagesActivity"/>
+        <activity android:name=".ui.activity.GroupWagesActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -127,7 +127,8 @@
             android:label="@string/title_activity_inventory_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.activity.ItemDetailsActivity" />
-        <activity android:name=".AddNewProduct"></activity>
+        <activity android:name=".AddNewProduct" />
+        <activity android:name=".ui.activity.RemoveNewProduct"></activity>
     </application>
 
 </manifest>
